tests/unit-fail-compilation/j023d.c.ref
j023d.c:2:7: error: Casting void type to non-void type.

    Undefined behavior (UB-CCV6):
        see C11 section 6.3.2.2:1 http://rvdoc.org/C11/6.3.2.2
        see C11 section J.2:1 item 23 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
kcc -d -Werror -Wfatal-errors j023d.c
