tests/unit-fail-compilation/j023d.c
int main(void) {
      return (int)((void) 0);
}
